# claimGraph

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: claim_extraction.py  consts.py  embeddings.py  exceptions.py  gdelt_api_client.py  graph_builder.py  main.py  prompts.py  report.py  streamlit_app.py  utils.py
src/claim_extraction/: claim_extractor.py
src/claim_extraction/news_articles/: gdelt.py
src/pydantic_models/: gdelt_api_params.py  graph.py
src/utils/: utils.py
tests/: conftest.py  test_claim_extraction.py
