[project]
name = "gdeltgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.27",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "ollama>=0.5.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 130
skip-string-normalization = true

[tool.isort]
profile = "black"
